# vips_rover

./: .gitignore  .gitmodules  LICENSE  README.md  ROADMAP.md  system_architecture.md
rover_description/: CMakeLists.txt  package.xml
rover_description/config/: controller_manager_sim.yaml  controllers_spawn.yaml  gazebo_controller_manager.yaml  gazebo_ros2_control.yaml  robot_localization.yaml  rover_controllers_hw.yaml  rover_controllers_sim.yaml
rover_description/launch/: hardware.launch.py  simulation.launch.py
rover_description/scripts/: wait_for_ros2_control.py
rover_description/urdf/: rover.urdf.xacro
rover_hardware_interface/: CMakeLists.txt  package.xml
rover_hardware_interface/config/: rover.dbc  rover_controllers.yaml
rover_hardware_interface/include/rover_hardware_interface/: rover_hardware_interface.hpp  socketcan_wrapper.hpp
rover_hardware_interface/launch/: rover_hardware.launch.py  rover_simulation.launch.py  rover_system.launch.py
rover_hardware_interface/src/: rover_hardware_interface.cpp  rover_hardware_interface.xml
rover_hardware_interface/urdf/: rover.urdf.xacro
rover_navigation/: CMakeLists.txt  package.xml
rover_navigation/behavior_trees/: navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml
rover_navigation/config/: nav2_default_view.rviz  nav2_params_empty_world.yaml  nav2_params_hw.yaml  nav2_params_sim.yaml  slam_toolbox_params.yaml
rover_navigation/launch/: navigation_empty_world.launch.py  navigation_hw.launch.py  navigation_sim.launch.py  navigation_sim_simple.launch.py  rover_nav_hw.launch.py  rover_nav_sim.launch.py  rover_nav_sim_empty_world.launch.py
rover_navigation/scripts/: cmd_vel_to_ackermann.py  manual_odom_publisher.py
scripts/: build.sh  check_urdf.sh  control  drive_circle.sh  drive_figure8.sh  drive_forward_back.sh  help  help.sh  interactive_control.sh  nav_hw.sh  nav_sim.sh  real  real.sh  real_new.sh  run_real_robot.sh  run_simulation.sh  setup.sh  sim  sim.sh  sim_new.sh  start_controllers.sh  stop_rover.sh  test_navigation.sh  validate.sh
setup/: 99-can.rules  can-setup.service
vips_driver/: CMakeLists.txt  package.xml
vips_driver/include/vips_driver/: vips_driver.hpp
vips_driver/launch/: vips_driver.launch.py
vips_driver/src/: vips_driver_node.cpp
vips_driver/test/: test_vips_parsing.cpp
