<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_description</name>
  <version>0.1.0</version>
  <description>URDF description and launch files for the Ackermann rover</description>
  <maintainer email="jake.stewart@racelogic.co.uk">Jake Stewart</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <!-- ros2_control stack and controllers -->
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ackermann_steering_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  
  <!-- Simulation dependencies (only needed when using simulation launch files) -->
  <exec_depend condition="$ROS_DISTRO == 'humble'">gazebo_ros_pkgs</exec_depend>
  <exec_depend condition="$ROS_DISTRO == 'iron'">ros_gz_sim</exec_depend>
  <exec_depend condition="$ROS_DISTRO == 'rolling'">ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
