<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_navigation</name>
  <version>1.0.0</version>
  <description>Nav2-based autonomous navigation package for the rover with SLAM and waypoint navigation capabilities</description>
  
  <maintainer email="jake@example.com">Jake Stewart</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Navigation dependencies -->
  <depend>nav2_bringup</depend>
  <depend>nav2_common</depend>
  <depend>navigation2</depend>
  <depend>nav2_msgs</depend>
  
  <!-- SLAM dependencies -->
  <depend>slam_toolbox</depend>
  
  <!-- Core ROS dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  
  <!-- Message and service dependencies -->
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ackermann_msgs</depend>
  
  <!-- Rover-specific dependencies -->
  <depend>rover_description</depend>
  
  <!-- Optional visualization -->
  <depend>rviz2</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
