<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>vips_driver</name>
    <version>0.1.0</version>
    <description>ROS 2 driver for the Racelogic VBOX Indoor Positioning System (VIPS)</description>
    <maintainer email="jake.stewart@racelogic.co.uk">Jake Stewart</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>

    <!-- The system dependency on asio (libasio-dev) is now handled directly
       inside CMakeLists.txt because the Ubuntu package does not provide
       the necessary CMake configuration files. -->

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>ament_cmake_gtest</test_depend>    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>